# code_qualtiy_lecture

code_quality_better/: CMakeLists.txt  CMakeLists.txt~  code_quality_better.cpp
code_quality_godlike/: CMakeLists.txt  CMakeLists.txt~  code_quality_godlike.cpp  doc_config~
code_quality_godlike/docs/: doc_config  doc_config~  doxygen_sqlite3.db
code_quality_godlike/docs/html/: annotated.html  calculations_8hpp.html  calculations_8hpp__dep__incl.map  calculations_8hpp__dep__incl.md5  calculations_8hpp__incl.map  calculations_8hpp__incl.md5  calculations_8hpp_source.html  classargument__invalid__exception-members.html  classargument__invalid__exception.html  classargument__invalid__exception__coll__graph.map  classargument__invalid__exception__coll__graph.md5  classes.html  classnegative__number__exception-members.html  classnegative__number__exception.html  classnegative__number__exception__coll__graph.md5  classnegative__number__exception__inherit__graph.map  dir_000006_000005.html  (+42 more)
code_quality_godlike/include/: calculations.hpp  exceptions.hpp
code_quality_godlike/src/: calculations.cpp  exceptions.cpp
code_quality_godlike/test/: CMakeLists.txt  test.cpp
code_quality_normal/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code_quality_normal  code_quality_normal.cpp
code_quality_professional/: CMakeLists.txt  code_quality_professional.cpp  doc_config
code_quality_professional/docs/: doxygen_sqlite3.db
code_quality_skilled/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  code_quality_skilled  code_quality_skilled.cpp
(+99 files in other folders)
